<resources>
    <string name="app_name">Smart Pantry Manager</string>
    <!-- Adding som e extra string resources just like the units in arrays-->
    <string name="title_add_ingredient">Add Ingredient</string>
    <!-- labels-->
    <string name="label_ingredient_name">Ingredient Name</string>
    <string name="label_quantity">Quantity</string>
    <string name="label_unit">Unit</string>
    <!-- save for button-->
    <string name="save">Save</string>
    <!-- errers in form checks-->
    <string name="error_required">This field is required</string>
    <string name="error_invalid_number">Enter a valid quantity</string>
    <!-- confirm text-->
    <string name="item_added">Ingredient added</string>
    <!-- adding the strings for the edit delete or cancel command -->
    <string name="title_edit_ingredient">Edit Ingredient</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="item_updated">Ingredient updated</string>
    <string name="item_deleted">Ingredient deleted</string>
    <string name="delete_ingredient">Delete Ingredient</string>
    <string name="delete_confirm_message">Are you sure you want to delete this ingredient?</string>

</resources>