<?xml version="1.0" encoding="utf-8"?>
<!-- Tryng to play around with a scroll view as smaller phones might not-->
<!-- display all the  data on single screen and need to scroll down-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginTop="?attr/actionBarSize"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- linear for line by line view-->
    <!-- simple top to button layout for all -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_ingredient_name"/>

        <EditText
            android:id="@+id/editIngredientName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_quantity"/>

        <EditText
            android:id="@+id/editIngredientQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_unit"/>
        <!-- adding the spinner makes it easier to get the
        predifined list of items not free entered text -->
        <Spinner
            android:id="@+id/spinnerUnit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"/>
        <!-- button set as hidden until edit is chosen-->
        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:visibility="gone"/>

    </LinearLayout>

</ScrollView>